Revert to Java 8 for unfortunate corporate laptop users